# pipen-lock

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.py  pipen_lock.py  pyproject.toml  setup.py
.github/workflows/: build.yml
examples/: example-cloud.py  example.py
