[tool.poetry]
name = "pipen-lock"
version = "0.1.0"
description = "Process lock for pipen to prevent multiple runs at the same time"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
pipen = "^0.7"
filelock = "^3"

[tool.poetry.plugins.pipen]
lock = "pipen_lock:PipenLockPlugin"

[tool.poetry.build]
generate-setup-file = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false
